@@ -19,7 +19,7 @@ class SnippetSearchClient {
     // Call the API
     client.addApiKey(
       new ApiKey()
-        .setAcl(List.of(Acl.SEARCH, Acl.ADD_OBJECT))
+        .setAcl(Arrays.asList(Acl.SEARCH, Acl.ADD_OBJECT))
         .setDescription("my new api key")
         .setValidity(300)
         .setMaxQueriesPerIPPerHour(100)
@@ -37,7 +37,15 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.addOrUpdateObject("indexName", "uniqueID", Map.of("key", "value"));
+    client.addOrUpdateObject(
+      "<YOUR_INDEX_NAME>",
+      "uniqueID",
+      new HashMap() {
+        {
+          put("key", "value");
+        }
+      }
+    );
     // SEPARATOR<
   }
 
@@ -80,9 +88,27 @@ class SnippetSearchClient {
       "<YOUR_INDEX_NAME>",
       new BatchWriteParams()
         .setRequests(
-          List.of(
-            new BatchRequest().setAction(Action.ADD_OBJECT).setBody(Map.of("key", "bar", "foo", "1")),
-            new BatchRequest().setAction(Action.ADD_OBJECT).setBody(Map.of("key", "baz", "foo", "2"))
+          Arrays.asList(
+            new BatchRequest()
+              .setAction(Action.ADD_OBJECT)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "bar");
+                    put("foo", "1");
+                  }
+                }
+              ),
+            new BatchRequest()
+              .setAction(Action.ADD_OBJECT)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "baz");
+                    put("foo", "2");
+                  }
+                }
+              )
           )
         )
     );
@@ -100,7 +126,20 @@ class SnippetSearchClient {
     // Call the API
     client.batch(
       "<YOUR_INDEX_NAME>",
-      new BatchWriteParams().setRequests(List.of(new BatchRequest().setAction(Action.CLEAR).setBody(Map.of("key", "value"))))
+      new BatchWriteParams()
+        .setRequests(
+          Arrays.asList(
+            new BatchRequest()
+              .setAction(Action.CLEAR)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "value");
+                  }
+                }
+              )
+          )
+        )
     );
     // SEPARATOR<
   }
@@ -116,7 +155,20 @@ class SnippetSearchClient {
     // Call the API
     client.batch(
       "<YOUR_INDEX_NAME>",
-      new BatchWriteParams().setRequests(List.of(new BatchRequest().setAction(Action.DELETE).setBody(Map.of("key", "value"))))
+      new BatchWriteParams()
+        .setRequests(
+          Arrays.asList(
+            new BatchRequest()
+              .setAction(Action.DELETE)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "value");
+                  }
+                }
+              )
+          )
+        )
     );
     // SEPARATOR<
   }
@@ -132,7 +184,20 @@ class SnippetSearchClient {
     // Call the API
     client.batch(
       "<YOUR_INDEX_NAME>",
-      new BatchWriteParams().setRequests(List.of(new BatchRequest().setAction(Action.DELETE_OBJECT).setBody(Map.of("key", "value"))))
+      new BatchWriteParams()
+        .setRequests(
+          Arrays.asList(
+            new BatchRequest()
+              .setAction(Action.DELETE_OBJECT)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "value");
+                  }
+                }
+              )
+          )
+        )
     );
     // SEPARATOR<
   }
@@ -149,7 +214,19 @@ class SnippetSearchClient {
     client.batch(
       "<YOUR_INDEX_NAME>",
       new BatchWriteParams()
-        .setRequests(List.of(new BatchRequest().setAction(Action.PARTIAL_UPDATE_OBJECT).setBody(Map.of("key", "value"))))
+        .setRequests(
+          Arrays.asList(
+            new BatchRequest()
+              .setAction(Action.PARTIAL_UPDATE_OBJECT)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "value");
+                  }
+                }
+              )
+          )
+        )
     );
     // SEPARATOR<
   }
@@ -166,7 +243,19 @@ class SnippetSearchClient {
     client.batch(
       "<YOUR_INDEX_NAME>",
       new BatchWriteParams()
-        .setRequests(List.of(new BatchRequest().setAction(Action.PARTIAL_UPDATE_OBJECT_NO_CREATE).setBody(Map.of("key", "value"))))
+        .setRequests(
+          Arrays.asList(
+            new BatchRequest()
+              .setAction(Action.PARTIAL_UPDATE_OBJECT_NO_CREATE)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "value");
+                  }
+                }
+              )
+          )
+        )
     );
     // SEPARATOR<
   }
@@ -182,7 +271,20 @@ class SnippetSearchClient {
     // Call the API
     client.batch(
       "<YOUR_INDEX_NAME>",
-      new BatchWriteParams().setRequests(List.of(new BatchRequest().setAction(Action.UPDATE_OBJECT).setBody(Map.of("key", "value"))))
+      new BatchWriteParams()
+        .setRequests(
+          Arrays.asList(
+            new BatchRequest()
+              .setAction(Action.UPDATE_OBJECT)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "value");
+                  }
+                }
+              )
+          )
+        )
     );
     // SEPARATOR<
   }
@@ -196,7 +298,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.batchAssignUserIds("userID", new BatchAssignUserIdsParams().setCluster("theCluster").setUsers(List.of("user1", "user2")));
+    client.batchAssignUserIds("userID", new BatchAssignUserIdsParams().setCluster("theCluster").setUsers(Arrays.asList("user1", "user2")));
     // SEPARATOR<
   }
 
@@ -214,7 +316,7 @@ class SnippetSearchClient {
       new BatchDictionaryEntriesParams()
         .setClearExistingDictionaryEntries(true)
         .setRequests(
-          List.of(
+          Arrays.asList(
             new BatchDictionaryEntriesRequest()
               .setAction(DictionaryAction.ADD_ENTRY)
               .setBody(
@@ -222,8 +324,8 @@ class SnippetSearchClient {
                   .setObjectID("1")
                   .setLanguage(SupportedLanguage.EN)
                   .setWord("fancy")
-                  .setWords(List.of("believe", "algolia"))
-                  .setDecomposition(List.of("trust", "algolia"))
+                  .setWords(Arrays.asList("believe", "algolia"))
+                  .setDecomposition(Arrays.asList("trust", "algolia"))
                   .setState(DictionaryEntryState.ENABLED)
               )
           )
@@ -246,7 +348,7 @@ class SnippetSearchClient {
       new BatchDictionaryEntriesParams()
         .setClearExistingDictionaryEntries(true)
         .setRequests(
-          List.of(
+          Arrays.asList(
             new BatchDictionaryEntriesRequest().setAction(DictionaryAction.DELETE_ENTRY).setBody(new DictionaryEntry().setObjectID("1"))
           )
         )
@@ -267,7 +369,7 @@ class SnippetSearchClient {
       DictionaryType.STOPWORDS,
       new BatchDictionaryEntriesParams()
         .setRequests(
-          List.of(
+          Arrays.asList(
             new BatchDictionaryEntriesRequest()
               .setAction(DictionaryAction.ADD_ENTRY)
               .setBody(
@@ -288,7 +390,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.browse("cts_e2e_browse", Hit.class);
+    client.browse("<YOUR_INDEX_NAME>", Hit.class);
     // SEPARATOR<
   }
 
@@ -301,7 +403,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.clearObjects("theIndexName");
+    client.clearObjects("<YOUR_INDEX_NAME>");
     // SEPARATOR<
   }
 
@@ -314,7 +416,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.clearRules("indexName");
+    client.clearRules("<YOUR_INDEX_NAME>");
     // SEPARATOR<
   }
 
@@ -327,7 +429,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.clearSynonyms("indexName");
+    client.clearSynonyms("<YOUR_INDEX_NAME>");
     // SEPARATOR<
   }
 
@@ -405,7 +507,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.deleteBy("theIndexName", new DeleteByParams().setFilters("brand:brandName"));
+    client.deleteBy("<YOUR_INDEX_NAME>", new DeleteByParams().setFilters("brand:brandName"));
     // SEPARATOR<
   }
 
@@ -418,7 +520,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.deleteIndex("theIndexName");
+    client.deleteIndex("<YOUR_INDEX_NAME>");
     // SEPARATOR<
   }
 
@@ -435,6 +537,19 @@ class SnippetSearchClient {
     // SEPARATOR<
   }
 
+  // Snippet for the deleteObjects method.
+  //
+  // call deleteObjects without error
+  void snippetForDeleteObjects() {
+    // >SEPARATOR deleteObjects default
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.deleteObjects("<YOUR_INDEX_NAME>", Arrays.asList("1", "2"));
+    // SEPARATOR<
+  }
+
   // Snippet for the deleteRule method.
   //
   // delete rule simple case
@@ -444,7 +559,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.deleteRule("indexName", "id1");
+    client.deleteRule("<YOUR_INDEX_NAME>", "id1");
     // SEPARATOR<
   }
 
@@ -470,7 +585,53 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.deleteSynonym("indexName", "id1");
+    client.deleteSynonym("<YOUR_INDEX_NAME>", "id1");
+    // SEPARATOR<
+  }
+
+  // Snippet for the generateSecuredApiKey method.
+  //
+  // generate secured api key basic
+  void snippetForGenerateSecuredApiKey() {
+    // >SEPARATOR generateSecuredApiKey generate secured api key basic
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.generateSecuredApiKey(
+      "2640659426d5107b6e47d75db9cbaef8",
+      new SecuredApiKeyRestrictions().setValidUntil(2524604400L).setRestrictIndices(Arrays.asList("Movies"))
+    );
+    // SEPARATOR<
+  }
+
+  // Snippet for the generateSecuredApiKey method.
+  //
+  // generate secured api key with searchParams
+  void snippetForGenerateSecuredApiKey1() {
+    // >SEPARATOR generateSecuredApiKey generate secured api key with searchParams
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.generateSecuredApiKey(
+      "2640659426d5107b6e47d75db9cbaef8",
+      new SecuredApiKeyRestrictions()
+        .setValidUntil(2524604400L)
+        .setRestrictIndices(Arrays.asList("Movies", "cts_e2e_settings"))
+        .setRestrictSources("192.168.1.0/24")
+        .setFilters("category:Book OR category:Ebook AND _tags:published")
+        .setUserToken("user123")
+        .setSearchParams(
+          new SearchParamsObject()
+            .setQuery("batman")
+            .setTypoTolerance(TypoToleranceEnum.STRICT)
+            .setAroundRadius(AroundRadiusAll.ALL)
+            .setMode(Mode.NEURAL_SEARCH)
+            .setHitsPerPage(10)
+            .setOptionalWords(Arrays.asList("one", "two"))
+        )
+    );
     // SEPARATOR<
   }
 
@@ -548,7 +709,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.getObject("theIndexName", "uniqueID", List.of("attr1", "attr2"));
+    client.getObject("<YOUR_INDEX_NAME>", "uniqueID", Arrays.asList("attr1", "attr2"));
     // SEPARATOR<
   }
 
@@ -564,8 +725,11 @@ class SnippetSearchClient {
     client.getObjects(
       new GetObjectsParams()
         .setRequests(
-          List.of(
-            new GetObjectsRequest().setAttributesToRetrieve(List.of("attr1", "attr2")).setObjectID("uniqueID").setIndexName("theIndexName")
+          Arrays.asList(
+            new GetObjectsRequest()
+              .setAttributesToRetrieve(Arrays.asList("attr1", "attr2"))
+              .setObjectID("uniqueID")
+              .setIndexName("<YOUR_INDEX_NAME>")
           )
         ),
       Hit.class
@@ -582,7 +746,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.getRule("indexName", "id1");
+    client.getRule("<YOUR_INDEX_NAME>", "qr-1725004648916");
     // SEPARATOR<
   }
 
@@ -595,7 +759,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.getSettings("cts_e2e_settings");
+    client.getSettings("<YOUR_INDEX_NAME>");
     // SEPARATOR<
   }
 
@@ -621,7 +785,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.getSynonym("indexName", "id1");
+    client.getSynonym("<YOUR_INDEX_NAME>", "id1");
     // SEPARATOR<
   }
 
@@ -634,7 +798,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.getTask("theIndexName", 123L);
+    client.getTask("<YOUR_INDEX_NAME>", 123L);
     // SEPARATOR<
   }
 
@@ -674,6 +838,45 @@ class SnippetSearchClient {
 
     // Call the API
     client.hasPendingMappings();
+    // SEPARATOR<
+  }
+
+  // Snippet for the indexExists method.
+  //
+  // indexExists
+  void snippetForIndexExists() {
+    // >SEPARATOR indexExists indexExists
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.indexExists("<YOUR_INDEX_NAME>");
+    // SEPARATOR<
+  }
+
+  // Snippet for the indexExists method.
+  //
+  // indexNotExists
+  void snippetForIndexExists1() {
+    // >SEPARATOR indexExists indexNotExists
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.indexExists("<YOUR_INDEX_NAME>");
+    // SEPARATOR<
+  }
+
+  // Snippet for the indexExists method.
+  //
+  // indexExistsWithError
+  void snippetForIndexExists2() {
+    // >SEPARATOR indexExists indexExistsWithError
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.indexExists("<YOUR_INDEX_NAME>");
     // SEPARATOR<
   }
 
@@ -741,7 +944,18 @@ class SnippetSearchClient {
     client.multipleBatch(
       new BatchParams()
         .setRequests(
-          List.of(new MultipleBatchRequest().setAction(Action.ADD_OBJECT).setBody(Map.of("key", "value")).setIndexName("theIndexName"))
+          Arrays.asList(
+            new MultipleBatchRequest()
+              .setAction(Action.ADD_OBJECT)
+              .setBody(
+                new HashMap() {
+                  {
+                    put("key", "value");
+                  }
+                }
+              )
+              .setIndexName("<YOUR_INDEX_NAME>")
+          )
         )
     );
     // SEPARATOR<
@@ -761,7 +975,7 @@ class SnippetSearchClient {
       new OperationIndexParams()
         .setOperation(OperationType.MOVE)
         .setDestination("<DESTINATION_INDEX_NAME>")
-        .setScope(List.of(ScopeType.RULES, ScopeType.SETTINGS))
+        .setScope(Arrays.asList(ScopeType.RULES, ScopeType.SETTINGS))
     );
     // SEPARATOR<
   }
@@ -807,7 +1021,75 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.partialUpdateObject("theIndexName", "uniqueID", Map.of("attributeId", "new value"));
+    client.partialUpdateObject(
+      "<YOUR_INDEX_NAME>",
+      "uniqueID",
+      new HashMap() {
+        {
+          put("attributeId", "new value");
+        }
+      }
+    );
+    // SEPARATOR<
+  }
+
+  // Snippet for the partialUpdateObjects method.
+  //
+  // call partialUpdateObjects with createIfNotExists=true
+  void snippetForPartialUpdateObjects() {
+    // >SEPARATOR partialUpdateObjects call partialUpdateObjects with createIfNotExists&#x3D;true
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.partialUpdateObjects(
+      "<YOUR_INDEX_NAME>",
+      Arrays.asList(
+        new HashMap() {
+          {
+            put("objectID", "1");
+            put("name", "Adam");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "2");
+            put("name", "Benoit");
+          }
+        }
+      ),
+      true
+    );
+    // SEPARATOR<
+  }
+
+  // Snippet for the partialUpdateObjects method.
+  //
+  // call partialUpdateObjects with createIfNotExists=false
+  void snippetForPartialUpdateObjects1() {
+    // >SEPARATOR partialUpdateObjects call partialUpdateObjects with createIfNotExists&#x3D;false
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.partialUpdateObjects(
+      "<YOUR_INDEX_NAME>",
+      Arrays.asList(
+        new HashMap() {
+          {
+            put("objectID", "3");
+            put("name", "Cyril");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "4");
+            put("name", "David");
+          }
+        }
+      ),
+      false
+    );
     // SEPARATOR<
   }
 
@@ -824,6 +1106,84 @@ class SnippetSearchClient {
     // SEPARATOR<
   }
 
+  // Snippet for the replaceAllObjects method.
+  //
+  // call replaceAllObjects without error
+  void snippetForReplaceAllObjects() {
+    // >SEPARATOR replaceAllObjects default
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.replaceAllObjects(
+      "<YOUR_INDEX_NAME>",
+      Arrays.asList(
+        new HashMap() {
+          {
+            put("objectID", "1");
+            put("name", "Adam");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "2");
+            put("name", "Benoit");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "3");
+            put("name", "Cyril");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "4");
+            put("name", "David");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "5");
+            put("name", "Eva");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "6");
+            put("name", "Fiona");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "7");
+            put("name", "Gael");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "8");
+            put("name", "Hugo");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "9");
+            put("name", "Igor");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "10");
+            put("name", "Julia");
+          }
+        }
+      ),
+      3
+    );
+    // SEPARATOR<
+  }
+
   // Snippet for the replaceSources method.
   //
   // replaceSources
@@ -833,7 +1193,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.replaceSources(List.of(new Source().setSource("theSource").setDescription("theDescription")));
+    client.replaceSources(Arrays.asList(new Source().setSource("theSource").setDescription("theDescription")));
     // SEPARATOR<
   }
 
@@ -859,7 +1219,73 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.saveObject("<YOUR_INDEX_NAME>", Map.of("objectID", "id", "test", "val"));
+    client.saveObject(
+      "<YOUR_INDEX_NAME>",
+      new HashMap() {
+        {
+          put("objectID", "id");
+          put("test", "val");
+        }
+      }
+    );
+    // SEPARATOR<
+  }
+
+  // Snippet for the saveObjects method.
+  //
+  // call saveObjects without error
+  void snippetForSaveObjects() {
+    // >SEPARATOR saveObjects call saveObjects without error
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.saveObjects(
+      "<YOUR_INDEX_NAME>",
+      Arrays.asList(
+        new HashMap() {
+          {
+            put("objectID", "1");
+            put("name", "Adam");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "2");
+            put("name", "Benoit");
+          }
+        }
+      )
+    );
+    // SEPARATOR<
+  }
+
+  // Snippet for the saveObjects method.
+  //
+  // saveObjects should report errors
+  void snippetForSaveObjects1() {
+    // >SEPARATOR saveObjects saveObjects should report errors
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.saveObjects(
+      "<YOUR_INDEX_NAME>",
+      Arrays.asList(
+        new HashMap() {
+          {
+            put("objectID", "1");
+            put("name", "Adam");
+          }
+        },
+        new HashMap() {
+          {
+            put("objectID", "2");
+            put("name", "Benoit");
+          }
+        }
+      )
+    );
     // SEPARATOR<
   }
 
@@ -873,9 +1299,9 @@ class SnippetSearchClient {
 
     // Call the API
     client.saveRule(
-      "indexName",
+      "<YOUR_INDEX_NAME>",
       "id1",
-      new Rule().setObjectID("id1").setConditions(List.of(new Condition().setPattern("apple").setAnchoring(Anchoring.CONTAINS)))
+      new Rule().setObjectID("id1").setConditions(Arrays.asList(new Condition().setPattern("apple").setAnchoring(Anchoring.CONTAINS)))
     );
     // SEPARATOR<
   }
@@ -891,13 +1317,13 @@ class SnippetSearchClient {
     // Call the API
     client.saveRules(
       "<YOUR_INDEX_NAME>",
-      List.of(
+      Arrays.asList(
         new Rule()
           .setObjectID("a-rule-id")
-          .setConditions(List.of(new Condition().setPattern("smartphone").setAnchoring(Anchoring.CONTAINS))),
+          .setConditions(Arrays.asList(new Condition().setPattern("smartphone").setAnchoring(Anchoring.CONTAINS))),
         new Rule()
           .setObjectID("a-second-rule-id")
-          .setConditions(List.of(new Condition().setPattern("apple").setAnchoring(Anchoring.CONTAINS)))
+          .setConditions(Arrays.asList(new Condition().setPattern("apple").setAnchoring(Anchoring.CONTAINS)))
       ),
       false,
       true
@@ -915,9 +1341,9 @@ class SnippetSearchClient {
 
     // Call the API
     client.saveSynonym(
-      "indexName",
+      "<YOUR_INDEX_NAME>",
       "id1",
-      new SynonymHit().setObjectID("id1").setType(SynonymType.SYNONYM).setSynonyms(List.of("car", "vehicule", "auto")),
+      new SynonymHit().setObjectID("id1").setType(SynonymType.SYNONYM).setSynonyms(Arrays.asList("car", "vehicule", "auto")),
       true
     );
     // SEPARATOR<
@@ -934,13 +1360,13 @@ class SnippetSearchClient {
     // Call the API
     client.saveSynonyms(
       "<YOUR_INDEX_NAME>",
-      List.of(
-        new SynonymHit().setObjectID("id1").setType(SynonymType.SYNONYM).setSynonyms(List.of("car", "vehicule", "auto")),
+      Arrays.asList(
+        new SynonymHit().setObjectID("id1").setType(SynonymType.SYNONYM).setSynonyms(Arrays.asList("car", "vehicule", "auto")),
         new SynonymHit()
           .setObjectID("id2")
           .setType(SynonymType.ONEWAYSYNONYM)
           .setInput("iphone")
-          .setSynonyms(List.of("ephone", "aphone", "yphone"))
+          .setSynonyms(Arrays.asList("ephone", "aphone", "yphone"))
       ),
       true,
       true
@@ -959,7 +1385,7 @@ class SnippetSearchClient {
     // Call the API
     client.search(
       new SearchMethodParams()
-        .setRequests(List.of(new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setHitsPerPage(50))),
+        .setRequests(Arrays.asList(new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setHitsPerPage(50))),
       Hit.class
     );
     // SEPARATOR<
@@ -977,7 +1403,9 @@ class SnippetSearchClient {
     client.search(
       new SearchMethodParams()
         .setRequests(
-          List.of(new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setFilters("actor:Scarlett Johansson"))
+          Arrays.asList(
+            new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setFilters("actor:Scarlett Johansson")
+          )
         ),
       Hit.class
     );
@@ -996,7 +1424,7 @@ class SnippetSearchClient {
     client.search(
       new SearchMethodParams()
         .setRequests(
-          List.of(
+          Arrays.asList(
             new SearchForHits()
               .setIndexName("<YOUR_INDEX_NAME>")
               .setQuery("<YOUR_QUERY>")
@@ -1020,7 +1448,7 @@ class SnippetSearchClient {
     client.search(
       new SearchMethodParams()
         .setRequests(
-          List.of(new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setFilters("NOT actor:Nicolas Cage"))
+          Arrays.asList(new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setFilters("NOT actor:Nicolas Cage"))
         ),
       Hit.class
     );
@@ -1030,7 +1458,7 @@ class SnippetSearchClient {
   // Snippet for the search method.
   //
   // retrieveFacets
-  void snippetForSearch6() {
+  void snippetForSearch4() {
     // >SEPARATOR search retrieveFacets
     // Initialize the client
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
@@ -1039,7 +1467,9 @@ class SnippetSearchClient {
     client.search(
       new SearchMethodParams()
         .setRequests(
-          List.of(new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setFacets(List.of("author", "genre")))
+          Arrays.asList(
+            new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setFacets(Arrays.asList("author", "genre"))
+          )
         ),
       Hit.class
     );
@@ -1049,7 +1479,7 @@ class SnippetSearchClient {
   // Snippet for the search method.
   //
   // retrieveFacetsWildcard
-  void snippetForSearch7() {
+  void snippetForSearch5() {
     // >SEPARATOR search retrieveFacetsWildcard
     // Initialize the client
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
@@ -1057,7 +1487,9 @@ class SnippetSearchClient {
     // Call the API
     client.search(
       new SearchMethodParams()
-        .setRequests(List.of(new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setFacets(List.of("*")))),
+        .setRequests(
+          Arrays.asList(new SearchForHits().setIndexName("<YOUR_INDEX_NAME>").setQuery("<YOUR_QUERY>").setFacets(Arrays.asList("*")))
+        ),
       Hit.class
     );
     // SEPARATOR<
@@ -1085,7 +1517,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.searchForFacetValues("indexName", "facetName");
+    client.searchForFacetValues("<YOUR_INDEX_NAME>", "facetName");
     // SEPARATOR<
   }
 
@@ -1098,7 +1530,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.searchRules("indexName", new SearchRulesParams().setQuery("something"));
+    client.searchRules("<YOUR_INDEX_NAME>", new SearchRulesParams().setQuery("zorro"));
     // SEPARATOR<
   }
 
@@ -1111,7 +1543,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.searchSingleIndex("indexName", Hit.class);
+    client.searchSingleIndex("<YOUR_INDEX_NAME>", Hit.class);
     // SEPARATOR<
   }
 
@@ -1124,7 +1556,7 @@ class SnippetSearchClient {
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
-    client.searchSynonyms("indexName");
+    client.searchSynonyms("<YOUR_INDEX_NAME>");
     // SEPARATOR<
   }
 
@@ -1152,7 +1584,18 @@ class SnippetSearchClient {
     // Call the API
     client.setDictionarySettings(
       new DictionarySettingsParams()
-        .setDisableStandardEntries(new StandardEntries().setPlurals(Map.of("fr", false, "en", false, "ru", true)))
+        .setDisableStandardEntries(
+          new StandardEntries()
+            .setPlurals(
+              new HashMap() {
+                {
+                  put("fr", false);
+                  put("en", false);
+                  put("ru", true);
+                }
+              }
+            )
+        )
     );
     // SEPARATOR<
   }
@@ -1161,14 +1604,14 @@ class SnippetSearchClient {
   //
   // setSettingsAttributesForFaceting
   void snippetForSetSettings() {
-    // >SEPARATOR setSettings setSettingsAttributesForFaceting
+    // >SEPARATOR setSettings default
     // Initialize the client
     SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
 
     // Call the API
     client.setSettings(
       "<YOUR_INDEX_NAME>",
-      new IndexSettings().setAttributesForFaceting(List.of("actor", "filterOnly(category)", "searchable(publisher)"))
+      new IndexSettings().setAttributesForFaceting(Arrays.asList("actor", "filterOnly(category)", "searchable(publisher)"))
     );
     // SEPARATOR<
   }
@@ -1184,8 +1627,84 @@ class SnippetSearchClient {
     // Call the API
     client.updateApiKey(
       "myApiKey",
-      new ApiKey().setAcl(List.of(Acl.SEARCH, Acl.ADD_OBJECT)).setValidity(300).setMaxQueriesPerIPPerHour(100).setMaxHitsPerQuery(20)
+      new ApiKey().setAcl(Arrays.asList(Acl.SEARCH, Acl.ADD_OBJECT)).setValidity(300).setMaxQueriesPerIPPerHour(100).setMaxHitsPerQuery(20)
     );
+    // SEPARATOR<
+  }
+
+  // Snippet for the waitForApiKey method.
+  //
+  // wait for api key helper - add
+  void snippetForWaitForApiKey() {
+    // >SEPARATOR waitForApiKey wait for api key helper - add
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.waitForApiKey("api-key-add-operation-test-java", ApiKeyOperation.ADD);
+    // SEPARATOR<
+  }
+
+  // Snippet for the waitForApiKey method.
+  //
+  // wait for api key - update
+  void snippetForWaitForApiKey1() {
+    // >SEPARATOR waitForApiKey wait for api key - update
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.waitForApiKey(
+      "api-key-update-operation-test-java",
+      ApiKeyOperation.UPDATE,
+      new ApiKey()
+        .setDescription("my updated api key")
+        .setAcl(Arrays.asList(Acl.SEARCH, Acl.ADD_OBJECT, Acl.DELETE_OBJECT))
+        .setIndexes(Arrays.asList("Movies", "Books"))
+        .setReferers(Arrays.asList("*google.com", "*algolia.com"))
+        .setValidity(305)
+        .setMaxQueriesPerIPPerHour(95)
+        .setMaxHitsPerQuery(20)
+    );
+    // SEPARATOR<
+  }
+
+  // Snippet for the waitForApiKey method.
+  //
+  // wait for api key - delete
+  void snippetForWaitForApiKey2() {
+    // >SEPARATOR waitForApiKey wait for api key - delete
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.waitForApiKey("api-key-delete-operation-test-java", ApiKeyOperation.DELETE);
+    // SEPARATOR<
+  }
+
+  // Snippet for the waitForAppTask method.
+  //
+  // wait for an application-level task
+  void snippetForWaitForAppTask() {
+    // >SEPARATOR waitForAppTask default
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.waitForAppTask(123L);
+    // SEPARATOR<
+  }
+
+  // Snippet for the waitForTask method.
+  //
+  // wait for task
+  void snippetForWaitForTask() {
+    // >SEPARATOR waitForTask default
+    // Initialize the client
+    SearchClient client = new SearchClient("YOUR_APP_ID", "YOUR_API_KEY");
+
+    // Call the API
+    client.waitForTask("<YOUR_INDEX_NAME>", 123L);
     // SEPARATOR<
   }
 }
